--- a/ICPP-19/communications.bib
+++ b/ICPP-19/communications.bib
@@ -32,6 +32,8 @@
   volume={27},
   number={6},
   pages={1625--1638},
+  doi = {10.1002/cpe.3359},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/cpe.3359},
   year={2015},
   publisher={Wiley Online Library}
 }
